basic styling and header complete

--- a/index.html
+++ b/index.html
@@ -1,13 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>uHOST</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="js/index.js" defer></script>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Vipin Bailwal" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>uHOST</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/index.js" defer></script>
+  </head>
+  <body>
+    <div class="backdrop"></div>
+    <!-- contains main-navigation and mobile-navigation -->
+    <header id="header" class="header">
+      <div class="header__logo-container">
+        <button class="toggle-btn">&#9776;</button>
+        <a href="#"
+          ><img src="./img/uhost-small-logo.png" alt="" id="header-img"
+        /></a>
+      </div>
+      <nav id="nav-bar" class="nav-bar">
+        <ul class="nav-bar__list">
+          <li class="nav-bar__item">
+            <a href="#" class="nav-bar__item--link">Home</a>
+          </li>
+          <li class="nav-bar__item">
+            <a href="#" class="nav-bar__item--link">Features</a>
+          </li>
+          <li class="nav-bar__item">
+            <a href="#" class="nav-bar__item--link">Benefits</a>
+          </li>
+          <li class="nav-bar__item">
+            <a href="#" class="nav-bar__item--link">Pricing</a>
+          </li>
+          <li class="nav-bar__item">
+            <a href="#" class="nav-bar__item--link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+<!-- 
+    <nav id="mobile-nav">
+      <ul class="mobile-nav__list">
+        <li class="mobile-nav__item">
+          <a href="#" class="mobile-nav__item---link">Home</a>
+        </li>
+        <li class="mobile-nav__item">
+          <a href="#" class="mobile-nav__item---link">Features</a>
+        </li>
+        <li class="mobile-nav__item">
+          <a href="#" class="mobile-nav__item---link">Benefits</a>
+        </li>
+        <li class="mobile-nav__item">
+          <a href="#" class="mobile-nav__item---link">Pricing</a>
+        </li>
+        <li class="mobile-nav__item">
+          <a href="#" class="mobile-nav__item---link">Contact</a>
+        </li>
+      </ul>
+    </nav> 
+  -->
+
+  </body>
 </html>
