--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="backdrop"></div>
     <!-- contains main-navigation and mobile-navigation -->
-    <header id="header" class="header">
-      <div class="header__logo-container">
+    <header id="header">
+      <div class="logo-container">
         <button class="toggle-btn">&#9776;</button>
         <a href="#"
           ><img src="./img/uhost-small-logo.png" alt="" id="header-img"
@@ -42,27 +42,27 @@
         </ul>
       </nav>
     </header>
-<!-- 
-    <nav id="mobile-nav">
+
+    <nav class="mobile-nav">
       <ul class="mobile-nav__list">
         <li class="mobile-nav__item">
-          <a href="#" class="mobile-nav__item---link">Home</a>
+          <a href="#" class="mobile-nav__item--link">Home</a>
         </li>
         <li class="mobile-nav__item">
-          <a href="#" class="mobile-nav__item---link">Features</a>
+          <a href="#" class="mobile-nav__item--link">Features</a>
         </li>
         <li class="mobile-nav__item">
-          <a href="#" class="mobile-nav__item---link">Benefits</a>
+          <a href="#" class="mobile-nav__item--link">Benefits</a>
         </li>
         <li class="mobile-nav__item">
-          <a href="#" class="mobile-nav__item---link">Pricing</a>
+          <a href="#" class="mobile-nav__item--link">Pricing</a>
         </li>
         <li class="mobile-nav__item">
-          <a href="#" class="mobile-nav__item---link">Contact</a>
+          <a href="#" class="mobile-nav__item--link">Contact</a>
         </li>
       </ul>
     </nav> 
-  -->
+  
 
   </body>
 </html>
