hero section completed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/index.js" defer></script>
   </head>
@@ -61,8 +65,24 @@
           <a href="#" class="mobile-nav__item--link">Contact</a>
         </li>
       </ul>
-    </nav> 
-  
+    </nav>
 
+    <section id="hero">
+      <div class="img-container">
+        <img src="./img/hero.svg" class="hero-image" />
+      </div>
+      <div class="content-container">
+        <h1 class="heading-primary">
+          When we host, You Grow
+        </h1>
+        <p class="intro-text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
+          perferendis odio, assumenda harum cumque?
+        </p>
+        <button class="cta-btn btn btn-start">
+          <a href="#pricing">Get Started Now</a>
+        </button>
+      </div>
+    </section>
   </body>
 </html>
