added features section

--- a/index.html
+++ b/index.html
@@ -77,11 +77,58 @@
         </h1>
         <p class="intro-text">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
-          perferendis odio, assumenda harum cumque?
+          perferendis odio, assumenda harum!
         </p>
         <button class="cta-btn btn btn-start">
           <a href="#pricing">Get Started Now</a>
         </button>
+      </div>
+    </section>
+
+    <section id="features">
+      <h2 class="heading-secondary text-center text-bold">
+        Features you don't wanna miss
+      </h2>
+      <p class="description text-center">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
+        perferendis odio. Ipsam numquam, non aperiam maxime fugit!
+      </p>
+      <div class="feature-row">
+        <article class="feature">
+          <img src="img/customer.svg" class="feature-image" alt="customer" />
+          <h3 class="feature-description">
+            3,857,000 Trusting Customers
+          </h3>
+        </article>
+        <article class="feature">
+          <img src="img/database.svg" class="feature-image" alt="customer" />
+          <h3 class="feature-description">99.99% Uptime Guarantee</h3>
+        </article>
+        <article class="feature">
+          <img
+            src="img/cloud-computing.svg"
+            class="feature-image"
+            alt="customer"
+          />
+          <h3 class="feature-description">Lightning Fast<br />CDN</h3>
+        </article>
+
+        <article class="feature">
+          <img src="img/security.svg" class="feature-image" alt="customer" />
+          <h3 class="feature-description">Timely Security Audits</h3>
+        </article>
+        <article class="feature">
+          <img src="img/application.svg" class="feature-image" alt="customer" />
+          <h3 class="feature-description text-center">
+            Managed Applications
+          </h3>
+        </article>
+        <article class="feature">
+          <img src="img/money-back.svg" class="feature-image" alt="customer" />
+          <h3 class="feature-description">
+            30 - Day Money Back Guarantee
+          </h3>
+        </article>
       </div>
     </section>
   </body>
