added benefits section

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <header id="header">
       <div class="logo-container">
         <button class="toggle-btn">&#9776;</button>
-        <a href="#"
-          ><img src="./img/uhost-small-logo.png" alt="" id="header-img"
-        /></a>
+        <a href="#">
+          <img src="./img/uhost-small-logo.png" alt="" id="header-img" />
+        </a>
       </div>
       <nav id="nav-bar" class="nav-bar">
         <ul class="nav-bar__list">
@@ -72,8 +72,11 @@
         <img src="./img/hero.svg" class="hero-image" />
       </div>
       <div class="content-container">
-        <h1 class="heading-primary">
-          When we host, You Grow
+        <h1 class="heading-primary text-bold">
+          When we host
+        </h1>
+        <h1 class="heading-primary text-bold">
+          You Grow
         </h1>
         <p class="intro-text">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
@@ -91,7 +94,7 @@
       </h2>
       <p class="description text-center">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
-        perferendis odio. Ipsam numquam, non aperiam maxime fugit!
+        perferendis odio. Ipsam numquam, non aperiam maxime fugit expedita!
       </p>
       <div class="feature-row">
         <article class="feature">
@@ -129,6 +132,68 @@
             30 - Day Money Back Guarantee
           </h3>
         </article>
+      </div>
+    </section>
+
+    <section id="benefits">
+      <h2 class="heading-secondary text-center text-bold">
+        Thinking about the benefits?
+      </h2>
+      <p class="description text-center">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
+        perferendis odio. Ipsam numquam, non aperiam maxime fugit expedita!
+      </p>
+
+      <div class="benefit-container block-left ">
+        <div class="benefit">
+          <h3 class="heading-tertiary">
+            Let us handle your digital growth
+          </h3>
+          <p class="intro-text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
+            perferendis odio, assumenda harum cumque?
+          </p>
+        </div>
+        <img src="./img/growth.svg" class="benefit-image" />
+      </div>
+
+      <div class="benefit-container block-right ">
+        <img src="./img/savings.svg" class="benefit-image" />
+        <div class="benefit">
+          <h3 class="heading-tertiary text-semi-bold">
+            Your savings are assured!
+          </h3>
+          <p class="intro-text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
+            perferendis odio, assumenda harum cumque?
+          </p>
+        </div>
+      </div>
+
+      <div class="benefit-container block-left ">
+        <div class="benefit">
+          <h3 class="heading-tertiary text-semi-bold">
+            We ensure secure access to your services
+          </h3>
+          <p class="intro-text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
+            perferendis odio, assumenda harum cumque?
+          </p>
+        </div>
+        <img src="./img/secure_service.svg" class="benefit-image" />
+      </div>
+
+      <div class="benefit-container block-right ">
+        <img src="./img/pay.svg" class="benefit-image " />
+        <div class="benefit">
+          <h3 class="heading-tertiary text-semi-bold">
+            You choose, Your plan
+          </h3>
+          <p class="intro-text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
+            perferendis odio, assumenda harum cumque?
+          </p>
+        </div>
       </div>
     </section>
   </body>
