added pricing section

--- a/index.html
+++ b/index.html
@@ -196,5 +196,58 @@
         </div>
       </div>
     </section>
+
+    <section id="pricing">
+      <h2 class="heading-secondary text-center text-bold">
+        Choose the plan that best suits your requirements
+      </h2>
+      <div class="plans-container">
+        <article class="plan plan-basic">
+          <h1 class="plan__title">FREE</h1>
+          <h2 class="plan__price"><span>$0</span>/month</h2>
+          <h3 class="text-center">For small teams.</h3>
+          <ul class="plan__features">
+            <li class="plan__feature">1 Workspace</li>
+            <li class="plan__feature">Limited Traffic</li>
+            <li class="plan__feature">5GB Storage</li>
+            <li class="plan__feature">Basic Support</li>
+          </ul>
+          <div>
+            <button class="plan-btn">CHOOSE PLAN</button>
+          </div>
+        </article>
+        <article class="plan plan-plus">
+          <h1 class="plan__annotation">RECOMMENDED</h1>
+          <h1 class="plan__title">PLUS</h1>
+          <h2 class="plan__price"><span>$29</span>/month</h2>
+          <h3 class="text-center">For ambitious projects.</h3>
+          <ul class="plan__features">
+            <li class="plan__feature">5 Workspaces</li>
+            <li class="plan__feature">Unlimited Traffic</li>
+            <li class="plan__feature">100GB Storage</li>
+            <li class="plan__feature">Plus Support</li>
+          </ul>
+          <div>
+            <button class="plan-btn">CHOOSE PLAN</button>
+          </div>
+        </article>
+        <article class="plan plan-premium">
+          <h1 class="plan__title">PREMIUM</h1>
+          <h2 class="plan__price"><span>$99</span>/month</h2>
+          <h3 class="text-center">Your enterprise solution.</h3>
+          <ul class="plan__features">
+            <li class="plan__feature">10 Workspaces</li>
+            <li class="plan__feature">Unlimited Traffic</li>
+            <li class="plan__feature">Unlimited Storage</li>
+            <li class="plan__feature">Priority Support</li>
+          </ul>
+          <div>
+            <button class="plan-btn">CHOOSE PLAN</button>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    
   </body>
 </html>
