added contact section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <h2 class="heading-secondary text-center text-bold">
         Features you don't wanna miss
       </h2>
-      <p class="description text-center">
+      <p class="description">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
         perferendis odio. Ipsam numquam, non aperiam maxime fugit expedita!
       </p>
@@ -122,7 +122,7 @@
         </article>
         <article class="feature">
           <img src="img/application.svg" class="feature-image" alt="customer" />
-          <h3 class="feature-description text-center">
+          <h3 class="feature-description">
             Managed Applications
           </h3>
         </article>
@@ -139,7 +139,7 @@
       <h2 class="heading-secondary text-center text-bold">
         Thinking about the benefits?
       </h2>
-      <p class="description text-center">
+      <p class="description">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
         perferendis odio. Ipsam numquam, non aperiam maxime fugit expedita!
       </p>
@@ -201,6 +201,10 @@
       <h2 class="heading-secondary text-center text-bold">
         Choose the plan that best suits your requirements
       </h2>
+      <p class="description">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
+        perferendis odio. Ipsam numquam, non aperiam maxime fugit expedita!
+      </p>
       <div class="plans-container">
         <article class="plan plan-basic">
           <h1 class="plan__title">FREE</h1>
@@ -248,6 +252,25 @@
       </div>
     </section>
 
-    
+    <section id="contact">
+      <h2 class="heading-secondary text-center">Allow us to tell you more</h2>
+      <p class="description">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et dolor
+        perferendis odio, assumenda harum cumque?
+      </p>
+      <div class="contact-details">
+        <form id="contact-form">
+          <img src="./img/mail.svg" class="contact-image" />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Enter your email"
+            required
+          />
+          <input type="submit" id="submit" value="Contact Me" />
+        </form>
+      </div>
+    </section>
   </body>
 </html>
