--- a/index.html
+++ b/index.html
@@ -272,5 +272,22 @@
         </form>
       </div>
     </section>
+
+    <footer id="footer">
+      <ul class="footer-nav">
+        <li class="footer-nav-item">
+          <a href="#" class="footer-link">Privacy Policy</a>
+        </li>
+        <li class="footer-nav-item">
+          <a href="#" class="footer-link">Terms & conditions</a>
+        </li>
+        <li class="footer-nav-item">
+          <a href="#" class="footer-link">FAQs</a>
+        </li>
+      </ul>
+      <div class="copyright-info">
+        <p>Copyright &copy 2020, Vipin Bailwal</p>
+      </div>
+    </footer>
   </body>
 </html>
